# gamagama-pdf

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
.github/workflows/: add-to-project.yml
src/gamagama/pdf/: __main__.py  bookmarks.py  convert.py  extract_tables.py  headers.py  main.py  split_md.py
src/gamagama/pdf/bookmarks/: __init__.py
src/gamagama/pdf/convert/: __init__.py  headings.py  pipeline.py
src/gamagama/pdf/extract_tables/: __init__.py  dedup.py  extraction.py  index.py
tests/: test_bookmarks.py  test_convert.py  test_extract_tables.py  test_headers.py  test_main.py  test_split.py  test_split_md.py
